Add command description to plugin.yml

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,3 +3,10 @@ version: '${project.version}'
 main: com.github.ricetech.keepinventoryplugin.KeepInventoryPlugin
 api-version: 1.19
 authors: [ the_ricetech ]
+commands:
+  restoreinventory:
+    description: >
+      Offer a player's previous inventory (stored at the time when they died) to the player to allow them to
+      select items to restore.
+      Set the optional second option to 'true' to see the inventory yourself instead of showing it to the player.
+    usage: "Usage: /restoreinventory <player>"
